--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "react": "^16.13.1",
@@ -12,10 +12,10 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "test": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts test --env=jest-environment-jsdom-sixteen",
+    "eject": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts eject",
     "backend": "json-server db.json -p 3001"
   },
   "eslintConfig": {
@@ -34,6 +34,7 @@
     ]
   },
   "devDependencies": {
+    "jest-environment-jsdom-sixteen": "^2.0.0",
     "json-server": "^0.16.1"
   }
 }
